--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 </ul>
             </nav>
             <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/people/Magic-Smile/100091050726875/?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/magicsmilesses/"><i class="fa fa-instagram"></i></a></li>
             </ul>
         </div>
 
